k8s/google/dasoji-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dasojiingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dasojistatic-ip
  labels:
    app: dasoji
spec:
  backend:
    serviceName: dasojiweb-backend
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dasojiweb-backend
  labels:
    app: dasoji
spec:
  type: NodePort
  selector:
    app: dasoji
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
